--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -22,8 +22,14 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
     
-    - name: Verify formatting
-      run: dart format --output=none --set-exit-if-changed .
+    - name: Format code
+      run: |
+        dart format .
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'github-actions@github.com'
+        git add .
+        git commit -m "style: format code" || echo "No changes to commit"
+        git push || echo "No changes to push"
     
     - name: Analyze project source
       run: flutter analyze
