--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -32,7 +32,7 @@ jobs:
         git push || echo "No changes to push"
     
     - name: Analyze project source
-      run: flutter analyze
+      run: flutter analyze --no-fatal-warnings
     
     - name: Run tests
       run: flutter test
