--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <package="com.example.visit_tracker">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="visit_tracker"
         android:name="${applicationName}"
